[FIX] My Orders: vertically align arrows(RT-2950)
also make text in templates better localizable

--- a/src/less/ripple/widgets.less
+++ b/src/less/ripple/widgets.less
@@ -358,6 +358,7 @@
         div i {
           color: @midgray;
           float: right;
+          margin-top: 2px;
         }
 
         i.sorted {
